# bp35c0-j11-stuff

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  doc.yml
bp35c0-j11/: Cargo.toml
bp35c0-j11/src/: command.rs  lib.rs  response.rs
misc/: hsv2rgb.rs
route-b-secrets/: Cargo.toml  build.rs
route-b-secrets/src/: lib.rs  secrets.example.rs
rp2040-adt7310/: Cargo.toml  build.rs
rp2040-adt7310/src/: main.rs
rp2040-akizuki-lcd-aqm0802/: Cargo.toml  build.rs
rp2040-akizuki-lcd-aqm0802/src/: main.rs
rp2040-combined/: Cargo.toml
rp2040-combined/src/: main.rs
rp2040-log-to-cdc/: Cargo.toml  build.rs  secrets.txt.example
rp2040-log-to-cdc/src/: main.rs
st7032i/: Cargo.toml
st7032i/src/: lib.rs
