[workspace]
resolver = "2"
members = [
  "bp35c0-j11",
  "rp2040-log-to-cdc",
  "rp2040-akizuki-lcd-aqm0802",
  "rp2040-adt7310",
  "rp2040-combined",
  "route-b-secrets",
  "st7032i",
]

[workspace.dependencies.bp35c0-j11]
path = "bp35c0-j11"

[workspace.dependencies.route-b-secrets]
path = "route-b-secrets"

[workspace.dependencies.st7032i]
path = "st7032i"


[workspace.dependencies.cortex-m]
version = "0.7.7"

[workspace.dependencies.cortex-m-rt]
version = "0.7.5"

[workspace.dependencies.defmt]
version = "0.3.10"

[workspace.dependencies.defmt-rtt]
version = "0.4.1"

[workspace.dependencies.embedded-alloc]
version = "0.6.0"

[workspace.dependencies.embedded-hal]
version = "1.0.0"

[workspace.dependencies.embedded_hal_0_2_x]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[workspace.dependencies.embedded-io]
version = "0.6.1"

[workspace.dependencies.fugit]
version = "0.3.7"

[workspace.dependencies.futures]
version = "0.3.31"
default-features = false
features = ["async-await"]

[workspace.dependencies.panic-probe]
version = "0.3.2"
default-features = false
features = ["print-defmt"]

[workspace.dependencies.pio]
version = "0.2.1"

[workspace.dependencies.pio-proc]
version = "0.2.2"

[workspace.dependencies.portable-atomic]
version = "1.11.0"
features = ["critical-section"]

[workspace.dependencies.rp2040-boot2]
version = "0.3.0"

[workspace.dependencies.rp2040-hal]
version = "0.11.0"
default-features = false
features = [
  "critical-section-impl",
  "rom-func-cache",
  "rt",
]

[workspace.dependencies.rtic]
version = "2.1.2"
default-features = false
features = ["thumbv6-backend"]

[workspace.dependencies.rtic-monotonics]
version = "2.0.3"
default-features = false
features = ["rp2040"]

[workspace.dependencies.rtic-sync]
version = "1.3.2"

[workspace.dependencies.usb-device]
version = "0.3.2"

[workspace.dependencies.usbd-serial]
version = "0.2.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
