[package]
name = "rp2040-adt7310"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp2040-adt7310"
test = false

[features]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "rp2040-hal/defmt",
]

[dependencies.cortex-m]
workspace = true

[dependencies.cortex-m-rt]
workspace = true

[dependencies.embedded-hal]
workspace = true

[dependencies.embedded_hal_0_2_x]
workspace = true

[dependencies.embedded-io]
workspace = true

[dependencies.rp2040-boot2]
workspace = true

[dependencies.rp2040-hal]
workspace = true

[dependencies.defmt]
optional = true
workspace = true

[dependencies.defmt-rtt]
optional = true
workspace = true

[dependencies.panic-probe]
optional = true
workspace = true
