[package]
name = "rp2040-akizuki-lcd-aqm0802"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp2040-akizuki-lcd-aqm0802"
test = false

[features]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "rp2040-hal/defmt",
]

[dependencies.adafruit-feather-rp2040]
version = "0.8.0"
default-features = false
features = [
  "boot2",
  "critical-section-impl",
  "rom-func-cache",
  "rt",
]

[dependencies.rp2040-hal]
version = "0.10.2"

[dependencies.cortex-m]
version = "0.7.7"

[dependencies.cortex-m-rt]
version = "0.7.3"

[dependencies.embedded-hal]
version = "1.0.0"

[dependencies.defmt]
version = "0.3.8"
optional = true

[dependencies.defmt-rtt]
version = "0.4.1"
optional = true

[dependencies.panic-probe]
version = "0.3.2"
default-features = false
features = ["print-defmt"]
optional = true
