[package]
name = "rp2040-akizuki-lcd-aqm0802"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp2040-akizuki-lcd-aqm0802"
test = false

[features]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "rp2040-hal/defmt",
]

[dependencies.adafruit-feather-rp2040]
workspace = true

[dependencies.rp2040-hal]
workspace = true

[dependencies.cortex-m]
workspace = true

[dependencies.cortex-m-rt]
workspace = true

[dependencies.embedded-hal]
workspace = true

[dependencies.defmt]
optional = true
workspace = true

[dependencies.defmt-rtt]
optional = true
workspace = true

[dependencies.panic-probe]
optional = true
workspace = true
