[package]
name = "rp2040-combined"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp2040-combined"
test = false

[features]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "bp35c0-j11/defmt",
  "rp2040-hal/defmt",
]

[dependencies.bp35c0-j11]
workspace = true

[dependencies.route-b-secrets]
workspace = true

[dependencies.st7032i]
workspace = true

[dependencies.cortex-m]
workspace = true

[dependencies.cortex-m-rt]
workspace = true

[dependencies.embedded-alloc]
workspace = true

[dependencies.embedded-hal]
workspace = true

[dependencies.embedded_hal_0_2_x]
workspace = true

[dependencies.embedded-io]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.pio]
workspace = true

[dependencies.portable-atomic]
workspace = true

[dependencies.rp2040-boot2]
workspace = true

[dependencies.rp2040-hal]
workspace = true

[dependencies.rtic]
workspace = true

[dependencies.rtic-monotonics]
workspace = true

[dependencies.rtic-sync]
workspace = true

[dependencies.defmt]
optional = true
workspace = true

[dependencies.defmt-rtt]
optional = true
workspace = true

[dependencies.panic-probe]
optional = true
workspace = true
