[package]
name = "rp2040-log-to-cdc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp2040-log-to-cdc"
test = false

[features]
default = ["adafruit-feather-rp2040"]
adafruit-feather-rp2040 = ["dep:adafruit-feather-rp2040"]
rp-pico = ["dep:rp-pico"]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "bp35c0-j11/defmt",
  "rp2040-hal/defmt",
]

[dependencies.bp35c0-j11]
workspace = true

[dependencies.route-b-secrets]
workspace = true

[dependencies.adafruit-feather-rp2040]
optional = true
workspace = true

[dependencies.rp-pico]
optional = true
workspace = true

[dependencies.rp2040-hal]
workspace = true

[dependencies.cortex-m]
workspace = true

[dependencies.cortex-m-rt]
workspace = true

[dependencies.embedded-alloc]
workspace = true

[dependencies.embedded-hal]
workspace = true

[dependencies.embedded-io]
workspace = true

[dependencies.usb-device]
workspace = true

[dependencies.usbd-serial]
workspace = true

[dependencies.defmt]
optional = true
workspace = true

[dependencies.defmt-rtt]
optional = true
workspace = true

[dependencies.panic-probe]
optional = true
workspace = true
